added select2 to demo page
Added select2 fields to the demo page. Inserted with autocomplete.php

--- a/ckeditor4.html
+++ b/ckeditor4.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>CKEditor</title>
-		<script src="https://cdn.ckeditor.com/4.8.0/full-all/ckeditor.js"></script>
+		<script src="./ckeditor/ckeditor.js"></script>
 	</head>
 	<body>
 		<textarea name="editor1"></textarea>
